[gd_scene load_steps=8 format=3 uid="uid://cj8bumj55ppai"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_xk5js"]
[ext_resource type="PackedScene" uid="uid://xw3q4ofcj7dm" path="res://scenes/settings_menu/settings_menu.tscn" id="2_vx16q"]
[ext_resource type="FontFile" uid="uid://c6jkde6kq3qiy" path="res://assets/fonts/Early GameBoy.ttf" id="2_w24a1"]

[sub_resource type="Gradient" id="Gradient_5vb6q"]
interpolation_mode = 2
colors = PackedColorArray(0, 0, 1, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0veup"]
gradient = SubResource("Gradient_5vb6q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x4k2c"]
texture = SubResource("GradientTexture2D_0veup")

[sub_resource type="LabelSettings" id="LabelSettings_0dote"]
font = ExtResource("2_w24a1")
font_size = 52

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xk5js")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x4k2c")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Game Title"
label_settings = SubResource("LabelSettings_0dote")

[node name="MiddleContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AlignmentContainer" type="HBoxContainer" parent="MainContainer/MiddleContainer"]
custom_minimum_size = Vector2(1050, 400)
layout_mode = 2
size_flags_horizontal = 4

[node name="GameControlButton" type="VBoxContainer" parent="MainContainer/MiddleContainer/AlignmentContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="ContinueButton" type="Button" parent="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w24a1")
theme_override_font_sizes/font_size = 28
text = "Continue"

[node name="NewGameButton" type="Button" parent="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w24a1")
theme_override_font_sizes/font_size = 28
text = "New Game"

[node name="LevelButton" type="Button" parent="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w24a1")
theme_override_font_sizes/font_size = 28
text = "Level"

[node name="SettingsButton" type="Button" parent="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w24a1")
theme_override_font_sizes/font_size = 28
text = "Settings"

[node name="QuitButton" type="Button" parent="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w24a1")
theme_override_font_sizes/font_size = 28
text = "Quit"

[node name="Gap" type="MarginContainer" parent="MainContainer/MiddleContainer/AlignmentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsMenu" parent="MainContainer/MiddleContainer/AlignmentContainer" instance=ExtResource("2_vx16q")]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="BottomContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainContainer/MiddleContainer/AlignmentContainer/GameControlButton/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="save" from="MainContainer/MiddleContainer/AlignmentContainer/SettingsMenu" to="." method="_on_settings_menu_save"]
